sleep-monitor/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep-monitor-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep-monitor
  template:
    metadata:
      labels:
        app: sleep-monitor
    spec:
      containers:
        - name: sleep-monitor
          image: bach2690/sleep-monitor:latest
          ports:
            - containerPort: 3000
