sleep-monitor/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sleep-monitor-service
spec:
  selector:
    app: sleep-monitor
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32000   # External access via EC2_IP:32000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 32443   # External access via EC2_IP:32443
